--- a/openid-client/Dockerfile
+++ b/openid-client/Dockerfile
@@ -14,6 +14,7 @@ RUN apk --no-cache --update add \
       curl \
       inotify-tools \
       nodejs \
+      socat \
       nodejs-npm
       
 RUN npm install npm -g --no-progress
@@ -29,4 +30,4 @@ RUN mix deps.get \
 
 ENTRYPOINT [ "sh" ]
 
-CMD ["-c", "mix phx.server"]
+CMD ["-c", "socat TCP-LISTEN:8080,fork TCP:keycloak:8080 & mix phx.server"]
